# RoboticVision

./: .gitignore  README.md
HW1/: CMakeLists.txt  baseballTracker.cpp  featureDetection.cpp  liveVideo.cpp  videoWrite.py
HW2/: CMakeLists.txt  corner_detection.cpp  distortion.cpp  intrinsic_params.cpp  my_distortion.cpp  objectDetect.cpp
HW3/: CMakeLists.txt  camera_calibration.cpp  epipolar_geom.cpp  rectify.cpp  stereo_calibration.cpp
HW4/: 3dmes.cpp  CMakeLists.txt  ball_traj.txt  leftIntrinsics.txt  rightIntrinsics.txt  tracker.cpp  traj_plotter.py  trajectory.cpp
SFM/: CMakeLists.txt  camera_params.yaml  camera_params2.yaml  knownParams.cpp  task3.cpp  unknownParams.cpp
motionFields/: CMakeLists.txt  featureMatching.cpp  multiFrameTracking.cpp  opticalFlow.cpp
timeToImpact/: CMakeLists.txt  plotter.py  task1.cpp  task2.cpp  task3.cpp
visualOdom/: CMakeLists.txt  HallwaySequenceEstimate.txt  PracticeSequenceEstimate.txt  task1.cpp  task1Plotter.py  task2.cpp  task2Plotter.py
visualOdom/HallwayImgs/: BYU Hallway Camera Parameters.txt  CameraParameters.yaml
visualOdom/PracticeImgs/: CameraParameters.yaml
